--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,26 +1,26 @@
-/*=============RESET CSS=============*/
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
+/*!*=============RESET CSS=============*!*/
+/*html, body, div, span, applet, object, iframe,*/
+/*h1, h2, h3, h4, h5, h6, p, blockquote, pre,*/
+/*a, abbr, acronym, address, big, cite, code,*/
+/*del, dfn, em, img, ins, kbd, q, s, samp,*/
+/*small, strike, strong, sub, sup, tt, var,*/
+/*b, u, i, center,*/
+/*dl, dt, dd, ol, ul, li,*/
+/*fieldset, form, label, legend,*/
+/*table, caption, tbody, tfoot, thead, tr, th, td,*/
+/*article, aside, canvas, details, embed, */
+/*figure, figcaption, footer, header, hgroup, */
+/*menu, nav, output, ruby, section, summary,*/
+/*time, mark, audio, video {*/
+/*	margin: 0;*/
+/*	padding: 0;*/
+/*	border: 0;*/
+/*	font-size: 100%;*/
+/*	font: inherit;*/
+/*	vertical-align: baseline;*/
+/*}*/
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -42,7 +42,6 @@ table {
 
 	border-spacing: 0;
 }
-
 
 .page-header {
 	display: flex;
@@ -170,10 +169,62 @@ a.icon {
 
 }
 
+@media screen and (max-width: 992px) {
+    .page-header nav {display: none;}
+
+    a.icon {
+        float: right;
+        display: block;
+    }
+    .header-logo a {
+        float: left;
+        display: block;
+    }
+    .page-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 20px;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .nav-overlay.responsive {display: block;}
+}
+
+@media screen and (max-width: 1200px) {
+    .page-header nav {display: none;}
+
+    a.icon {
+        float: right;
+        display: block;
+    }
+    .header-logo a {
+        float: left;
+        display: block;
+    }
+    .page-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 20px;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .nav-overlay.responsive {display: block;}
+}
+
+
 /** MAIN **/
 article{
     display: flex;
     margin: 20px 0;
+    /*background: #f8f9ff;*/
+    padding: 10px;
+    box-sizing: border-box;
+    box-shadow: 2px 2px 5px grey;
+
 }
 
 article h3{
@@ -226,14 +277,17 @@ article h3{
 }
 .article-left{
     width: 30%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    /*height: 100%;*/
+    /*display: flex;*/
+    /*justify-content: center;*/
+    /*align-items: center;*/
+    margin-right: 15px;
 }
 
 .article-left img{
     width: 100%;
-    margin: 10px 0;
+    /*height: 100%;*/
+    /*margin: 10px 0;*/
 
 }
 
@@ -294,5 +348,17 @@ article h3{
     align-items: center;
 }
 
+/*h1{*/
+/*    font-size: 50px;*/
+/*}*/
 
 
+/* Admin page*/
+
+main h1{
+    text-align: center;
+}
+
+.admin-tabs{
+
+}
