--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,24 +1,24 @@
 /*!*=============RESET CSS=============*!*/
-/*html, body, div, span, applet, object, iframe,*/
-/*h1, h2, h3, h4, h5, h6, p, blockquote, pre,*/
-/*a, abbr, acronym, address, big, cite, code,*/
-/*del, dfn, em, img, ins, kbd, q, s, samp,*/
-/*small, strike, strong, sub, sup, tt, var,*/
-/*b, u, i, center,*/
-/*dl, dt, dd, ol, ul, li,*/
-/*fieldset, form, label, legend,*/
-/*table, caption, tbody, tfoot, thead, tr, th, td,*/
-/*article, aside, canvas, details, embed, */
-/*figure, figcaption, footer, header, hgroup, */
-/*menu, nav, output, ruby, section, summary,*/
-/*time, mark, audio, video {*/
-/*	margin: 0;*/
-/*	padding: 0;*/
-/*	border: 0;*/
-/*	font-size: 100%;*/
-/*	font: inherit;*/
-/*	vertical-align: baseline;*/
-/*}*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	/*font: inherit;*/
+	vertical-align: baseline;
+}
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
@@ -47,7 +47,6 @@ table {
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
-
 }
 
 nav ul{
@@ -69,10 +68,12 @@ a.icon {
 
 .nav-overlay{
     background-color: #f7c61d;
-    padding-left: 25px;
+    padding-left: 22px;
     display: none;
+}
 
-
+.nav-overlay ul{
+    /*padding-right: 10px;*/
 }
 
 .nav-overlay ul li{
@@ -217,7 +218,7 @@ a.icon {
 
 
 /** MAIN **/
-article{
+.page-main article{
     display: flex;
     margin: 20px 0;
     /*background: #f8f9ff;*/
@@ -353,12 +354,69 @@ article h3{
 /*}*/
 
 
-/* Admin page*/
+/*!*=============ADMIN PAGE=============*!*/
 
-main h1{
-    text-align: center;
+/*.admin-tabs{*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*}*/
+
+/*.admin-tabs .pills{*/
+/*    align-self: center;*/
+/*}*/
+
+.tab-header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 15px;
+
 }
 
-.admin-tabs{
+.pills{
+    /*border: 1px solid black;*/
+    padding: 5px;
+    box-shadow: 0 0 10px #ccc;
+    border-radius: 10px;
+}
 
+.tab-body{
+    /*border: 1px solid black;*/
+    padding: 10px;
+    box-shadow: 0 0 10px #ccc;
+    border-radius: 10px;
+}
+
+.tab-body button{
+    margin-bottom: 20px;
+}
+
+.nav-pills .nav-link.active {
+    background: #f7c61d;
+}
+
+.w30{
+    width: 30%;
+}
+.w20{
+    width: 20%;
+}
+.w15{
+    width: 15%;
+}
+.w10{
+    width: 10%;
+}
+.w5{
+    width: 5%;
+}
+
+.articles article{
+    height: 40px;
+    padding-left: 10px;
+}
+
+.articles article:nth-child(odd){
+    background: rgba(0,0,0,0.05);
 }
